--- a/templates/posLogin/inicio.html
+++ b/templates/posLogin/inicio.html
@@ -11,7 +11,12 @@
     
     <p id="user-info"></p>
 
- 
+    <script>
+        // Pega o ID do usuário vindo do Flask
+        const userId = "{{ user_id }}";
+        console.log("ID do usuário logado:", userId);
+        </script>
+    
 </body>
-<script src="inicio.js"></script>
+
 </html>
