--- a/static/style.css
+++ b/static/style.css
@@ -1,34 +1,90 @@
+:root{
+    --roxo:#8a3fbf;
+    --branco: #ffff;
+    --verde: #00E280;
+    --azul: #20455d;
+}
+
 body {
     font-family: Arial, sans-serif;
     display: flex;
+    flex-direction: row;
     justify-content: center;
+    margin: 0%;
+    padding: 0%;
+    background-image: url(Fundo\ Site\ Sem\ Cor\ -.png);
+    background-color: #8a3fbf43;
+    width: 100%;
+}
+section{
+    display: flex;
+    flex-direction: row;
+    margin-top: 100px;
+    justify-content: space-around;
+    width: 60%;
+    height: 80vh;
+    box-shadow: 0 4px 12px rgb(0, 0, 0);
+    border-radius: 10px ;
+}
+#img-login{
+    display: flex;
+    flex-direction: row;
     align-items: center;
-    height: 100vh;
-    background-color: #f4f4f4;
+    border-radius: 10px 0px 0px 10px;
+    background-color: white;
 }
 .login-container {
-    background: white;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
     text-align: center;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    background-color: var(--roxo);
+    border-radius: 0px 10px 10px 0px;;
+}
+form{
+    display: flex;
+    flex-direction: column;
+}
+img{
+    height: 80%;
 }
 input[type="text"], input[type="password"] {
-    width: 90%;
+    width: 300px;
     padding: 10px;
     margin: 10px 0;
     border: 1px solid #ccc;
     border-radius: 4px;
 }
-button {
-    background-color: #007bff;
+#Entrar{
+    background-color: var(--verde);
     color: white;
     border: none;
     padding: 10px;
-    width: 90%;
+    width: 320px;
     border-radius: 4px;
     cursor: pointer;
+    transition: 0.6s;
+    font-size: 15px;
+    font-weight: 600;
 }
-button:hover {
-    background-color: #0056b3;
+#Entrar:hover {
+    transform: scale(0.95);
+    color: black;
+}
+#coruja-login{
+    position: absolute;
+    background-color: red;
+    height: 0%;
+    width: 0%;
+    top: -22px;
+    left: 400px;
+    z-index: 999;
+}
+#img-coruja{
+    height: 150px;
+}
+h2{
+    color: white;
 }
