--- a/templates/index.html
+++ b/templates/index.html
@@ -7,14 +7,21 @@
     <title>Login</title>
 </head>
 <body>
-    <div class="login-container">
-        <h2>Login</h2>
-        <form action="/login" method="POST">
-            <input type="text" name="username" placeholder="Usuário" required>
-            <input type="password" name="password" placeholder="Senha" required>
-            <button type="submit">Entrar</button>
-        </form>
+    <div id="coruja-login"><img id="img-coruja" src="/static/Coruja-login.png" alt="">
     </div>
+    <section>
+        <div id="img-login">
+                <img  src="/static/Logo.png" alt="">
+            </div>
+            <div class="login-container">
+                <h2>Login</h2>
+                <form action="/login" method="POST">
+                    <input type="text" name="username" placeholder="Usuário" required>
+                    <input type="password" name="password" placeholder="Senha" required>
+                    <button id="Entrar" type="submit">Entrar</button>
+                </form>
+            </div>
+    </section>
 </body>
     <script src="{{ url_for('static', filename='scripts.js') }}"></script>
 </html>
