Testando pagamento do mercado pago

--- a/templates/paginaUnica.html
+++ b/templates/paginaUnica.html
@@ -22,7 +22,7 @@
         <div class="produto">
           <h3>Assinatura Mensal</h3>
           <p>Renovação mensal</p>
-          <a href="/login"><button class="assinar">Assinar</button></a>
+          <a href="https://www.mercadopago.com.br/subscriptions/checkout?preapproval_plan_id=2c93808495f10eac0195fdd17e970819" ><button class="assinar">Assinar</button></a>
         </div>
 
         <div class="produto">
