Deploy para testar o site

--- a/templates/paginaUnica.html
+++ b/templates/paginaUnica.html
@@ -22,15 +22,13 @@
         <div class="produto">
           <h3>Assinatura Mensal</h3>
           <p>Renovação mensal</p>
-          <form action="/criar_assinatura" method="POST">
-            <button type="submit" class="btn btn-primary">Assinar Agora</button>
-          </form>
+          <a href="/cadastrar"><button class="assinar">Assinar</button></a>
         </div>
 
         <div class="produto">
           <h3>Assinatura Anual</h3>
           <p>Renovação Anual</p>
-          <a href="/login"><button class="assinar">Assinar</button></a>
+          <a href="/cadastrar"><button class="assinar">Assinar</button></a>
         </div>
       </div>
     </div>
