Testando mercado pago

--- a/templates/paginaUnica.html
+++ b/templates/paginaUnica.html
@@ -23,7 +23,7 @@
         <div class="produto">
           <h3>Assinatura Mensal</h3>
           <p>Renovação mensal</p>
-          <a href="/cadastrar"><button class="assinar">Assinar</button></a>
+          <a href="https://www.mercadopago.com.br/subscriptions/checkout?preapproval_plan_id=2c9380849154066301916d1a4b330a69"><button class="assinar">Assinar</button></a>
         </div>
 
         <div class="produto">
@@ -81,5 +81,30 @@
   <script>
     const logoVixUrl = "{{ url_for('static', filename='Logo Clique Pedagógico.png') }}";
   </script>
+
+<script type="text/javascript">
+  (function() {
+     function $MPC_load() {
+        window.$MPC_loaded !== true && (function() {
+        var s = document.createElement("script");
+        s.type = "text/javascript";
+        s.async = true;
+        s.src = document.location.protocol + "//secure.mlstatic.com/mptools/render.js";
+        var x = document.getElementsByTagName('script')[0];
+        x.parentNode.insertBefore(s, x);
+        window.$MPC_loaded = true;
+     })();
+  }
+  window.$MPC_loaded !== true ? (window.attachEvent ? window.attachEvent('onload', $MPC_load) : window.addEventListener('load', $MPC_load, false)) : null;
+  })();
+ /*
+       // to receive event with message when closing modal from congrants back to site
+       function $MPC_message(event) {
+         // onclose modal ->CALLBACK FUNCTION
+        // !!!!!!!!FUNCTION_CALLBACK HERE Received message: {event.data} preapproval_id !!!!!!!!
+       }
+       window.$MPC_loaded !== true ? (window.addEventListener("message", $MPC_message)) : null; 
+       */
+</script>
 </body>
 </html>
