Pagamento com o mercado pago

--- a/templates/cadastrar.html
+++ b/templates/cadastrar.html
@@ -40,8 +40,9 @@
         <input type="date" class="form-control" name="data_nascimento" required>
       </div>
 
-      <button type="submit" class="btn btn-primary">Cadastrar</button>
-      <a href="{{ url_for('login') }}" class="btn btn-secondary">Voltar ao Login</a>
+      <a href="{{ url_for('gerar_assinatura') }}" class="btn btn-primary">Assinar</a>
+
+
     </form>
   </div>
 </body>
