Testando o pagamento do mercado pago

--- a/templates/cadastrar.html
+++ b/templates/cadastrar.html
@@ -40,7 +40,7 @@
         <input type="date" class="form-control" name="data_nascimento" required>
       </div>
 
-      <a href="{{ url_for('gerar_assinatura') }}" class="btn btn-primary">Assinar</a>
+      <button type="submit" class="btn btn-primary">Cadastrar</button>
 
 
     </form>
