Trocando o metodo de assinatura para o Stripe

--- a/templates/paginaUnica.html
+++ b/templates/paginaUnica.html
@@ -24,6 +24,7 @@
           <h3>Assinatura Mensal</h3>
           <p>Renovação mensal</p>
           <a href="/cadastrar"><button class="assinar">Assinar</button></a>
+          <button id="btnAssinar">Assinar Agora</button>
         </div>
 
         <div class="produto">
