Atualizando o mercado pago

--- a/templates/paginaUnica.html
+++ b/templates/paginaUnica.html
@@ -23,8 +23,8 @@
         <div class="produto">
           <h3>Assinatura Mensal</h3>
           <p>Renovação mensal</p>
-          <a href="/cadastrar"><button class="assinar">Assinar</button></a>
-          <button id="btnAssinar">Assinar Agora</button>
+          <form action="/criar-assinatura" method="POST">
+            <button type="submit">Assinar Agora</button>
         </div>
 
         <div class="produto">
