--- a/templates/paginaUnica.html
+++ b/templates/paginaUnica.html
@@ -8,6 +8,7 @@
   <link href="{{ url_for('static', filename='stylesInicio.css') }}" rel="stylesheet">
 </head>
 <body>
+  <script src="https://sdk.mercadopago.com/js/v2"></script>
 
 
   <!-- BLOCO: CONTEÚDO INICIAL (antes do login) -->
