--- a/templates/paginaUnica.html
+++ b/templates/paginaUnica.html
@@ -17,6 +17,7 @@
     <header>
       <h2>Bem-vindo</h2>
       <a class="logout-btn" href="/login">Login</a>
+      <a class="logout-btn" href="/cadastrar">cadastrar</a>
     </header>
 
     <div class="container">
