Adicionando o pagamento via boleto

--- a/templates/paginaUnica.html
+++ b/templates/paginaUnica.html
@@ -27,12 +27,10 @@
           <h3>Assinatura Mensal</h3>
           <p>Renovação mensal</p>
           <a href="/criar-assinatura">
-            <button>Assinar agora</button>
-          </a>               
-          <a href="/cancelar-assinatura-direto">
-            <button>Cancelar assinatura</button>
-          </a>
-            
+            <button>Pagar com credito</button>
+          </a>   
+          <button onclick="window.location.href='/assinar'">Assinar com boleto ou cartão</button>   
+          
         </div>
 
         <div class="produto">
@@ -69,7 +67,7 @@
         <a href="/logout" class="btn btn-danger">Sair</a>
       </div>
       <div style="margin-top: 20px; text-align: center;">
-        <a href="/cancelar-assinatura-direto" class="btn btn-danger">cancelar Assinatura</a>
+        <a href="/cancelar-assinatura">Cancelar assinatura</a>
       </div>
     
     </div>
